nohup.out
Queue '55100' created.
Queue '55110' created.
데이터 시스템 큐 초기화됨, 현재 큐:['55100', '55110']
Traceback (most recent call last):
  File "/home/ubuntu/DandJourney/main.py", line 1, in <module>
    from App import BotAgent
  File "/home/ubuntu/DandJourney/App/__init__.py", line 3, in <module>
    from .apis.DiscordReply import BotAgent
  File "/home/ubuntu/DandJourney/App/apis/DiscordReply/__init__.py", line 19, in <module>
    BotAgent.load_extension("App.apis.DiscordReply.BotCommand")
  File "/home/ubuntu/.local/lib/python3.11/site-packages/interactions/client/client.py", line 1995, in load_extension
    module = importlib.import_module(module_name, package)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.11/importlib/__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/ubuntu/DandJourney/App/apis/DiscordReply/BotCommand.py", line 8, in <module>
    from .exts.PPMethod import PromptMix
  File "/home/ubuntu/DandJourney/App/apis/DiscordReply/exts/PPMethod.py", line 39
    '''
       ^
IndentationError: unindent does not match any outer indentation level
Queue '55100' created.
Queue '55110' created.
데이터 시스템 큐 초기화됨, 현재 큐:['55100', '55110']
Traceback (most recent call last):
  File "/home/ubuntu/DandJourney/main.py", line 1, in <module>
    from App import BotAgent
  File "/home/ubuntu/DandJourney/App/__init__.py", line 3, in <module>
    from .apis.DiscordReply import BotAgent
  File "/home/ubuntu/DandJourney/App/apis/DiscordReply/__init__.py", line 19, in <module>
    BotAgent.load_extension("App.apis.DiscordReply.BotCommand")
  File "/home/ubuntu/.local/lib/python3.11/site-packages/interactions/client/client.py", line 1995, in load_extension
    module = importlib.import_module(module_name, package)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.11/importlib/__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/ubuntu/DandJourney/App/apis/DiscordReply/BotCommand.py", line 8, in <module>
    from .exts.PPMethod import PromptMix
  File "/home/ubuntu/DandJourney/App/apis/DiscordReply/exts/PPMethod.py", line 39
    '''
       ^
IndentationError: unindent does not match any outer indentation level
